# psource

./: CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  renovate.json
.github/workflows/: aur_publish.yml  build_and_test.yml  cargo_publish.yml  publish.yml
src/: lib.rs  main.rs
src/cli/: cli.rs  mod.rs
src/config/: config.rs  mod.rs  output_target.rs
src/printer/: file_walker.rs  mod.rs  printer.rs
