[package]
name = "psource"
version = "0.4.3"
authors = ["Frederik Holm Strøm <crates.io@frederikstroem.com>"]
description = "CLI tool to pretty print source code to stdout or directly to the clipboard."
edition = "2021"
readme = "README.md"
repository = "https://github.com/frederikstroem/psource"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "terminal", "clipboard", "llm", "text"]
exclude = [".github", ".vscode"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1"
config = { version = "0.14", features = ["toml"] }
walkdir = "2.5"
arboard = "3.4"
file-format = "0.23"
git2 = "0.19"
glob = "0.3"
